# news-scraper-mcp

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.cursor/rules/: docstrings.mdc  package-managment.mdc  project-description.mdc  python-general.mdc
news_scraper_mcp/: __init__.py  server.py
